--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.9.0",
-    "@mapbox/polyline": "^1.1.0"
+    "@mapbox/polyline": "^1.1.0",
+    "@turf/turf": "^5.1.6",
+    "firebase-admin": "^8.9.2"
   }
 }
